# behave-pycharm-issue-repro

./: README.md  fix_behave.diff  pyproject.toml
features/: hello.feature
features/steps/: hello_steps.py
src/: some_code.py
